After de-duping

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/nigelsdtech/gmail-model#readme",
   "dependencies": {
     "do-google-auth": "nigelsdtech/do-google-auth#1.0.0",
-    "googleapis": "2.x"
+    "google-auth-library": "0.9.7",
+    "googleapis": "2.x",
+    "jws": "3.0.0",
+    "string-template": "0.2.1"
   }
 }
