Implement batching to only process up to 10 results at a time in parallel. This avoids smashing gmail and them returning socket hangups

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/nigelsdtech/gmail-model#readme",
   "dependencies": {
+    "batchflow": "0.4.0",
     "do-google-auth": "git://github.com/nigelsdtech/do-google-auth.git",
     "emailjs": "1.0.4",
     "google-auth-library": "0.9.7",
